# colmap-openmvs-app

./: .dockerignore  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  LICENSE  README.md  build_android.sh  package-lock.json  package.json  tsconfig.json
.cargo/: config.toml
.github/scripts/: screenshots.mjs
.github/scripts/screenshots/: .gitignore  Dockerfile  screenshots.mjs
.github/workflows/: android.yml  build-and-deploy.yml  build-android.yml  ci.yml  deploy-android.yml  deploy-web.yml  release.yml  retry-workflow.yml
android/app/src/main/kotlin/dev/dioxus/main/: MainActivity.kt
api/: Cargo.toml
api/src/: lib.rs  types.rs
app/: Cargo.toml  build.rs
app/assets/: dx-components-theme-override.css  icon.icns  main.css  mycomponents.css  tasks-panel.css
app/assets/views/: project.css  projects.css  settings.css  startup.css  viewer.css
app/assets/views/project/: config.css  images.css  logs.css  outputs.css
app/js/: viewer3d.js
app/src/: backend_url.rs  demo.rs  fullstack_compat.rs  logging.rs  main.rs  picker.rs  server.rs  task_manager.rs  viewer_conversion.rs
app/src/components/: mod.rs
app/src/components/sheet/: component.rs
app/src/components/sidebar/: component.rs
app/src/mycomponents/: banner.rs  help.rs  mod.rs  page_header.rs  tasks_panel.rs  toast.rs
app/src/views/: mod.rs  projects.rs  settings.rs  startup_tasks.rs  viewer.rs
app/src/views/project/: config.rs  images.rs  layout.rs  logs.rs  mod.rs  outputs.rs  overview.rs
app/ts/: ToastStack.ts  download.ts  index.ts  state.ts  styles.ts  utils.ts  viewer3d-class.ts  viewer3d.ts
assets/: dx-components-theme-override.css  dx-components-theme.css  main.css  mycomponents.css
assets/views/: project.css  project_detail.css  projects.css  settings.css
assets/views/project/: images.css
backend/: Cargo.toml  build.rs
backend/src/: android_settings_validation.rs  android_startup.rs  config.rs  files.rs  init.rs  lib.rs  line_reader.rs  logging.rs  output_viewer.rs  outputs.rs  pipeline.rs  ply_to_glb.rs  process.rs  projects.rs  runtimes_api.rs  settings.rs  task_registry.rs  theme.rs
backend/src/outputs/: glb.rs  mod.rs
backend/src/project/: images.rs  mod.rs  paths.rs  videos.rs
backend/src/runtimes/: docker.rs  docker_dind.rs  image_manager.rs  mod.rs  proot.rs  registry.rs  shared.rs  tests.rs
backend/tests/: generate_demo_data.rs
rrfd/: Cargo.toml
rrfd/src/: android.rs  lib.rs
src/: main.rs
src/common/: mod.rs  settings.rs
src/common/runtimes/: mod.rs  proot.rs  tests.rs
src/components/: mod.rs
src/mycomponents/: banner.rs  mod.rs  page_header.rs
src/server/: mod.rs  projects.rs  settings.rs
src/server/project/: images.rs  mod.rs
src/server/runtimes/: mod.rs  proot.rs  tests.rs
src/views/: mod.rs  project.rs  project_detail.rs  projects.rs  settings.rs
src/views/project/: config.rs  images.rs  logs.rs  mod.rs
