[package]
name = "colmap-openmvs-app"
version = "0.1.0"
authors = ["Yeicor <yeicor+no-reply@github.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.7", features = ["router", "fullstack"] }
dioxus-free-icons = {version = "0.10.0", features = ["bootstrap"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }

serde = { version = "*", features = ["derive"] } # Same version as dioxus
serde_derive_default = "0.1"

tokio = { version = "*", features = ["sync", "macros", "rt"] }
futures-util = "0.3"

sevenz-rust2 = "0.21"
urlencoding = "2.1"

# Runtime system dependencies
reqwest = { version = "0.11", features = ["json", "stream"] }
serde_json = "1.0"
thiserror = "1.0"
which = "5.0"
tar = "0.4"
xz2 = "0.1"
once_cell = "1.21.4"
image = "0.25.10"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]
