[package]
name = "colmap-openmvs-app"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
colmap-openmvs-api = { path = "../api" }
colmap-openmvs-backend = { path = "../backend", optional = true }

# UI Framework
dioxus = { version = "0.7.9", features = ["fullstack", "router"] }
dioxus-free-icons = { version = "0.10.0", features = ["bootstrap"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", rev = "203824b", default-features = false }

# Async runtime (needed for Android startup on server feature)
tokio = { version = "1.35", features = ["sync"], optional = true }

# Utilities
urlencoding = { version = "2.1" }
base64 = { version = "0.22" }
chrono = { workspace = true }
futures = { version = "0.3" }
http = { version = "1.4" }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }

[features]
default = ["web"]

# Client target features
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

# Server support
server = ["dioxus/server", "colmap-openmvs-backend", "tokio"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.35", features = ["time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3", features = ["futures"] }
web-sys = { version = "0.3", features = ["Window", "Location", "UrlSearchParams", "Storage", "Blob", "BlobPropertyBag", "Url"] }
js-sys = { version = "0.3" }
