[package]
name = "colmap-openmvs-app"
authors.workspace = true
edition.workspace = true

[dependencies]
colmap-openmvs-api = { path = "../api" }
colmap-openmvs-backend = { path = "../backend", optional = true }

# UI Framework
dioxus = { version = "0.7.9", features = ["router"] }
dioxus-free-icons = { version = "0.10.0", features = ["bootstrap"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", rev = "203824b", default-features = false }

# Async runtime (needed for Android startup on server feature)
tokio = { version = "1.35", features = ["sync"], optional = true }

# Utilities
urlencoding = { version = "2.1" }
base64 = { version = "0.22" }
chrono = { workspace = true }
futures = { version = "0.3" }
http = { version = "1.4" }
serde = { workspace = true, optional = true }
serde_json = { version = "1.0", optional = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }

[features]
default = ["fullstack"]
fullstack = ["dioxus/fullstack"]
demo = ["serde", "serde_json"] # The demo showcases what this app can do without any server, by bundling pre-reconstructed demo data. The pre-reconstructed demo data and more is extracted from a e2e test suite that optionally saves this to assets if an env var is provided. This feature conditionally bundles those assets into the app so that the user can see the whole app for themselves without any server feature. Used for github pages. Incompatible with fullstack (default feature as it must be deployed as a static site).

# Client target features
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

# Server support
server = ["dioxus/server", "colmap-openmvs-backend", "tokio"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.35", features = ["time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3", features = ["futures"] }
web-sys = { version = "0.3", features = ["Window", "Location", "UrlSearchParams", "Storage", "Blob", "BlobPropertyBag", "Url"] }
js-sys = { version = "0.3" }
