[package]
name = "colmap-openmvs-app"
authors.workspace = true
edition.workspace = true

[dependencies]
colmap-openmvs-api = { path = "../api" }
colmap-openmvs-backend = { path = "../backend", optional = true }

# UI Framework
dioxus = { version = "0.7.9", features = ["router"] }
dioxus-free-icons = { version = "0.10.0", features = ["bootstrap"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", rev = "203824b", default-features = false }

# Async runtime (needed for Android startup on server feature)
tokio = { version = "1.35", features = ["sync"], optional = true }

# Utilities
urlencoding = { version = "2.1" }

# ZIP archive creation / extraction
zip = { version = "8", default-features = false, features = ["deflate"] }

# Error handling (used by viewer conversion)
anyhow = { workspace = true }
bytes = { version = "1" }
base64 = { version = "0.22" }
chrono = { workspace = true }
futures = { version = "0.3" }
http = { version = "1.4" }
serde = { workspace = true }
serde_json = { version = "1.0" }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }

[features]
default = ["fullstack"]
fullstack = ["dioxus/fullstack"]
demo = [] # The demo showcases what this app can do without any backend (static site), by bundling pre-reconstructed demo data (see build.rs).

# Client target features
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

# Server support
server = ["dioxus/server", "colmap-openmvs-backend", "tokio"]

[build-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
image = { version = "0.25", default-features = false, features = ["png", "webp"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.35", features = ["time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.4", features = ["futures"] }
wasm-bindgen-futures = { version = "0.4" }
web-sys = { version = "0.3", features = ["Window", "Location", "UrlSearchParams", "Storage", "Blob", "BlobPropertyBag", "Url", "AbortController", "AbortSignal", "Request", "RequestInit", "Response"] }
js-sys = { version = "0.3" }
