[package]
name = "colmap-openmvs-backend"
version = "0.1.0"
authors = ["Yeicor <yeicor+no-reply@github.com>"]
edition = "2021"

[dependencies]
colmap-openmvs-api = { path = "../api" }

# Core serialization
serde = { version = "*", features = ["derive"] }
serde_json = { version = "1.0" }
serde-saphyr = { version = "0.0.26" }

# Async runtime
tokio = { version = "*", features = ["full"] }

# Async utilities for streaming
futures-util = { version = "0.3", features = ["sink", "io"] }
dioxus = { version = "0.7.9", features = ["fullstack", "server"] }

# Async trait support
async-trait = { version = "0.1" }

# Error handling
anyhow = { version = "1.0" }

# Regex for version parsing
regex = { version = "1.10" }

# Image processing for image resizing
image = { version = "0.25.10" }

# 7z archive extraction for demo images
sevenz-rust2 = { version = "0.21" }

# XZ compression for proot
xz2 = { version = "0.1" }

# Tar archive handling
tar = { version = "0.4" }

# Runtime management state
once_cell = { version = "1.21.4" }

# HTTP requests for downloading runtimes and demo data
reqwest = { version = "0.11", features = ["json", "stream"] }

# Executable discovery
which = { version = "5.0" }

futures = "0.3.32"

# OCI Distribution client for pulling container images (renamed to oras-project/rust-oci-client)
oci-client = { version = "0.16" }

# Gzip decompression for Docker layers
flate2 = { version = "1.0" }

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# Ordered HashMap
indexmap = { version = "2.0" }

# UUID generation for task IDs
uuid = { version = "1", features = ["v4"] }
