[package]
name = "colmap-openmvs-backend"
authors.workspace = true
edition.workspace = true

[dependencies]
colmap-openmvs-api = { path = "../api" }

# Core serialization
serde = { workspace = true }
serde_json = { version = "1.0" }
serde-saphyr = { version = "0.0.27" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
dioxus = { version = "0.7.9", features = ["fullstack", "server"] }
http = { version = "1.4" }

# Async utilities for streaming
futures-util = { version = "0.3", features = ["sink", "io"] }
futures = { version = "0.3.32" }
tokio-util = { version = "0.7", features = ["io"] }

# Async trait support
async-trait = { version = "0.1" }

# Error handling
anyhow = { workspace = true }

# Regex for version parsing
regex = { version = "1.10" }

# Image processing for image resizing
image = { version = "0.25.10" }

# XZ compression for proot
xz2 = { version = "0.1" }

# Tar archive handling
tar = { version = "0.4" }

# Runtime management state
once_cell = { version = "1.21.4" }

# HTTP requests for downloading runtimes and demo data
ureq = "3.3"

# File discovery
which = { version = "8.0" }
glob = "0.3.3"

# Process management
libc = { version = "0.2" }

# Gzip decompression for Docker layers
flate2 = { version = "1.0" }

# ZIP extraction for rootfs bundle
zip = { version = "8", default-features = false, features = ["deflate"] }

# Date and time handling
chrono = { workspace = true }

# Ordered HashMap
indexmap = { version = "2.0" }

# UUID generation for task IDs
uuid = { version = "1", features = ["v4"] }

# Unix signal handling
nix = { version = "0.31", features = ["process"] }

# Structured logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }

# CLI argument parsing with env-var support
clap = { version = "4", features = ["derive", "env"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Threading"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.22" }
ndk-context = { version = "0.1" }

[build-dependencies]
serde = { workspace = true }
serde_json = { version = "1.0" }
zip = { version = "8", features = ["deflate"] }
tar = { version = "0.4" }
xz2 = { version = "0.1" }
flate2 = { version = "1.0" }
ureq = { version = "3.3" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3.27.0"
